modules/voyscript/tests/scripts/analyzer/errors/cyclic_ref_external_a.notest.voy
class_name TestCyclicRefExternalA

const B = preload("cyclic_ref_external.voy")

var v = B.v
